--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-asgiref==3.6.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
-django==4.2.12
-idna==3.4
-pkgconfig==1.5.5
-pymysql==1.1.0
-requests==2.31.0
+asgiref==3.5.2
+Django==4.1.4
+psycopg2-binary==2.9.5
 sqlparse==0.4.3
 tzdata==2022.7
-urllib3==2.0.3
+whitenoise==6.2.0
 pillow==10.2.0
